tdf#160462 qt a11y: Open menu bar on F10

F10 is used as a shortcut to open the menu bar (or main menu)
on various platforms and toolkits, and KDE adapted that
for KF 6 as well, see [1].

Do the same for the Qt-based VCL plugins: Connect a slot
to the F10 shortcut that opens the first menu item.

[1] https://wordsmith.social/felix-ernst/f10-for-accessibility-in-kf6

Change-Id: I27e34f87a115b89e047b08aed334207c64b0b9e5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168765
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins